--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
     "ember-cli": "^1.13.8",
-    "ember-cli-release": "0.2.3",
-    "ember-cli-sri": "^1.0.3",
+    "ember-validations": "2.0.0-alpha.4",
     "ember-cli-app-version": "0.5.0",
     "ember-cli-babel": "^5.1.3",
     "ember-cli-bootstrap-datepicker": "0.5.3",
@@ -36,11 +35,15 @@
     "ember-cli-mirage": "0.1.5",
     "ember-cli-pretender": "0.3.2",
     "ember-cli-qunit": "^1.0.0",
+    "ember-cli-release": "0.2.3",
     "ember-cli-sass": "^4.0.0",
+    "ember-cli-sri": "^1.0.3",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "1.13.8",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
+    "ember-rapid-forms": "0.7.2",
+    "ember-truth-helpers": "1.1.0",
     "emberx-select": "2.0.0"
   }
 }
