--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "ember-inflector": "~1.3.1",
     "lodash": "~3.7.0",
     "Faker": "~2.1.3",
-    "bootstrap-datepicker": "~1.4.0"
+    "bootstrap-datepicker": "~1.4.0",
+    "intl-tel-input": "~6.0.3"
   }
 }
