--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
     "ember-cli": "^1.13.8",
-    "ember-validations": "2.0.0-alpha.4",
     "ember-cli-app-version": "0.5.0",
     "ember-cli-babel": "^5.1.3",
     "ember-cli-bootstrap-datepicker": "0.5.3",
@@ -42,8 +41,10 @@
     "ember-data": "1.13.8",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
+    "ember-intl-tel-input": "1.1.2",
     "ember-rapid-forms": "0.7.2",
     "ember-truth-helpers": "1.1.0",
+    "ember-validations": "2.0.0-alpha.4",
     "emberx-select": "2.0.0"
   }
 }
