--- a/bower.json
+++ b/bower.json
@@ -14,11 +14,12 @@
     "qunit": "~1.18.0",
     "bootstrap-sass": "~3.3.4",
     "pretender": "~0.6.0",
-    "moment": "~2.10.3",
+    "moment": "~2.10.6",
     "ember-inflector": "~1.3.1",
     "lodash": "~3.7.0",
     "Faker": "~2.1.3",
     "bootstrap-datepicker": "~1.4.0",
-    "intl-tel-input": "~6.0.3"
+    "intl-tel-input": "~6.0.3",
+    "pikaday": "~1.3.3"
   }
 }
