--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
     "ember-intl-tel-input": "1.1.2",
+    "ember-pikaday": "0.12.0",
     "ember-rapid-forms": "0.7.2",
     "ember-truth-helpers": "1.1.0",
     "ember-validations": "2.0.0-alpha.4",
