--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "Faker": "~2.1.3",
     "bootstrap-datepicker": "~1.4.0",
     "intl-tel-input": "~6.0.3",
-    "pikaday": "~1.3.3"
+    "pikaday": "~1.3.3",
+    "jquery.inputmask": "3.2.0"
   }
 }
