--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-data": "1.13.8",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
+    "ember-inputmask": "0.2.1",
     "ember-intl-tel-input": "1.1.2",
     "ember-pikaday": "0.12.0",
     "ember-rapid-forms": "0.7.2",
